# GaussianPlume

./: .gitignore  CMakeLists.txt  README.md  main.cpp  realm.cpp  realm.h  sind.cpp  sind.h
Input/: data.csv  inputParams
Output/: data.csv  forward_model_data.csv
src/: cosd.cpp  cosd.h  latlon2local.cpp  latlon2local.h  main.cpp  realm.cpp  realm.h
